# CJsShell

./: .clang-format  .clang-tidy  .clangd  .codacy.yml  .gitignore  .gitmodules  .npmignore  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  PLUGIN_REMOVAL_SUMMARY.md  README.md  appveyor.yml  cjsh.rb  fibo.py  index.html  install.js  install.sh  mkdocs.yml  notes.txt  package.json  prime.py  run_shell_tests.sh  sitemap.xml  suggested_features.txt  test_completion.md  test_func.sh  test_script.py  test_threading.sh
cjsh/: CMakeLists.txt
cjsh-isocline/: CMakeLists.txt  README.md
cjsh-isocline/src/: attr.h  common.c  common.h  completers.c  completions.c  completions.h  editline.c  editline_command_palette.c  editline_completion.c  editline_help.c  editline_history.c  env.h  env_internal.h  highlight.h  history.c  history.h  isocline.c  isocline.h  isocline_env.c  isocline_keybindings.c  isocline_options.c  isocline_readline.c  isocline_terminal.c  isocline_typeahead.c  isocline_typeahead.h  keybinding_internal.h  keybinding_specs.h  keybindings.h  keycodes.h  stringbuf.c  stringbuf.h  term.c  term.h  tty.c  tty.h  tty_esc.c  undo.c  undo.h
cjsh-isocline/src/completion/: completers.c  completions.c  completions.h  highlight.c
cjsh-isocline/src/core/: env.h  env_internal.h  isocline.c  isocline_env.c  isocline_options.c
cjsh-isocline/src/edit/: editline.c  editline_command_palette.c  editline_completion.c  editline_help.c  editline_history.c  editline_menu.c  editline_viewport.h  history.c  isocline_readline.c  isocline_typeahead.c  prompt_line_replacement.c  prompt_line_replacement.h
cjsh-isocline/src/keybinding/: isocline_keybindings.c  keybinding_specs.h  keybindings.h  keycodes.h
cjsh-isocline/src/terminal/: attr.c  bbcode.c  bbcode.h  isocline_terminal.c  term.c  term.h  term_color.c  tty.c  unicode.h
cjsh-isocline/src/utils/: fuzzy_match.c  fuzzy_match.h  stringbuf.c
cjsh/src/: cjsh.cpp
cjsh/src/builtin/: alias_abbr_commands.cpp  alias_abbr_commands.h  approot_command.cpp  boolean_commands.cpp  boolean_commands.h  builtin_help.cpp  builtin_help.h  builtin_option_parser.cpp  builtin_option_parser.h  cd_command.cpp  cd_command.h  command_command.cpp  command_command.h  declare_command.cpp  declare_command.h  directory_stack_commands.cpp  directory_stack_commands.h  double_bracket_command.cpp  echo_command.h  eval_command.cpp  exec_command.h  exit_command.cpp  export_command.cpp  export_command.h  fc_command.cpp  fc_command.h  generate_completions_command.cpp  getopts_command.h  hash_command.h  help_command.cpp  history_command.h  hook_command.cpp  if_command.cpp  if_command.h  internal_subshell_command.cpp  job_control_commands.h  local_command.cpp  loop_control_commands.h  printf_command.cpp  pwd_command.h  (+16 more)
cjsh/src/completions/: builtins_completions_handler.cpp  cjsh_completions.cpp  cjsh_completions.h  completion_history.h  completion_spell.cpp  completion_tracker.cpp  external_sub_completions.h
cjsh/src/core/: builtin.cpp  cjsh_filesystem.cpp  (+19 more)
plugins/: AnyShell.cpp  CJsAnyShell.cpp  CMakeLists.txt  ColorError.cpp  README.md  SpotifyStatus.cpp  SystemMonitor.cpp  custom_ls.cpp  example_plugin.cpp  hello_plugin.cpp  passwordplugin.cpp
plugins/GUIPlugin/: CMakeLists.txt  GUIPlugin.cpp  GUIPlugin.h  build.sh
plugins/all_features_plugin/: all_features_plugin.cpp  build.sh
plugins/example_c_plugin/: README.md  build.sh
plugins/example_cpp_plugin/: CMakeLists.txt  README.md  all_features_plugin.cpp  build.sh
plugins/example_rust_plugin/: Cargo.toml  README.md  build.rs  build.sh  pluginapi.h
plugins/examples/: README.md
plugins/fast_prompt_tags/: CMakeLists.txt  build.sh  fast_prompt_tags.cpp  pluginapi.h
plugins/jarvis/: CMakeLists.txt  build.sh  cjsh.h  jarvis.cpp  jarvis.py  pluginapi.h
plugins/old-plugins/: Calculator.cpp  ClaudeAnthropic.cpp  SpotifyStatus.cpp  SyntaxHighlighter.cpp  SystemMonitor.cpp  example_plugin.cpp  passwordplugin.cpp
plugins/plugin_test/: CMakeLists.txt  plugin_test.cpp
plugins/threaded_prompt/: CMakeLists.txt  threaded_prompt.cpp
tests/: CMakeLists.txt  README.md  compare_shells.sh  debug_posix_issues.sh  parser_tests.cpp  plugin_manager_test.cpp  preview_error_outputs.sh  quick_posix_check.sh  run_shell_tests.sh  terminal_passthrough_test.cpp  test_history_expansion.cpp  theme_manager_test.cpp  time_startup_binaries.py  time_test_binaries.py
tests/build_system/: test_build_system.py
tests/completions/: test_completion_globals.cpp  test_completions.cpp
tests/core/: fg_terminal_race_injector.c  test_function_pipeline_job_control.py  test_interactive_shutdown.py
tests/highlighter/: test_syntax_highlighting.cpp
tests/integration/: run_integration_tests.sh  test_ai_commands.exp  test_basic_commands.exp  test_user_settings.exp
tests/isocline/: isocline_pty_driver.c  test_isocline_behavior.c  test_isocline_pty.py
tests/shell/: test_advanced_builtins.sh  test_advanced_io_redirection.sh  test_advanced_parameter_expansion.sh  test_advanced_redirections.sh  test_advanced_test_operators.sh  test_ai_integration.sh  test_alias.sh  test_and_or.sh  test_approot.sh  test_arithmetic_command_form_and_c_style_for.sh  test_arithmetic_comprehensive.sh  test_background_builtins.sh  test_brace_expansion.sh  test_builtin_commands.sh  test_builtin_dispatch_edge_cases.sh  test_builtin_strict_compat.sh  test_cd.sh  test_cd_edges.sh  test_cjsh_env_startup.sh  test_cjsh_invocation.sh  test_cjsh_script_files.sh  test_command_hash_edge_cases.sh  test_command_line_options.sh  test_command_substitution_regression.sh  test_command_substitution_sentinels.sh  test_comprehensive_comments.sh  test_control_structures.sh  test_declare_builtin.sh  test_declare_validation.sh  test_dirs_pushd_popd.sh  test_double_bracket.sh  test_edge_cases.sh  test_elif_statements.sh  test_enhanced_error_handling.sh  test_environment_vars.sh  test_error_edge_cases.sh  test_error_handling.sh  test_error_message_formatting.sh  test_error_severity.sh  test_error_suggestions_flag.sh  (+88 more)
(+1146 files in other folders)
